Fixed bug with data role wrapping on events index

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#total-score{
+    font-size:26px;
+}
+#total-score span{
+    font-size:34px;
+    font-weight:bold;
+}
